fixed footer issue on horizontal view (white space).

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -220,7 +220,7 @@ blockquote {
 
 .footer {
   background: linear-gradient(349deg, #020733, #6280cc);
-  height: 25vh;
+  /* height: 25vh; */
 }
 
 .fab {
